source_code/flask_api_sample/flask-app.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: flask-app
  namespace: default 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: <ecr_repository_url>:latest
        ports:
        - containerPort: 80

---
apiVersion: v1 
kind: Service 
metadata:
  name: flask-svc
  namespace: default
  labels: 
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: flask-app
