source_code/flask_api_sample/micro-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: micro-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: <nlb_dns_name>
    http:
      paths:
      - backend:
          service:
            name: flask-svc
            port:
              number: 80
        path: /
        pathType: Prefix
